<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_white_1000"
    android:orientation="vertical"
    android:weightSum="1">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="Choose Theme Color"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/md_text" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_divider" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:clipToPadding="true"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:scrollbars="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:columnCount="2"
                android:rowCount="5">
                <!--Everywhere in cardview was android:stateListAnimator="@anim/raise"-->
                <android.support.v7.widget.CardView
                    android:id="@+id/theme_card_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_row="0"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_blue_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/theme_card_text_blue"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/theme_card_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_row="0"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_red_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/theme_card_text_red"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/theme_card_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_row="1"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_green_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/theme_card_text_green"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/theme_card_orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_row="1"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_orange_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/theme_card_text_orange"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/theme_card_pink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_row="2"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_pink_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/theme_card_text_pink"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/theme_card_indigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_row="2"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_indigo_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/theme_card_text_indigo"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/theme_card_brown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_row="3"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_brown_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/theme_card_text_brown"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/theme_card_blue_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_row="3"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_blue_grey_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/theme_card_text_blue_grey"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/theme_card_falcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_row="4"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_falcon_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/theme_card_text_falcon"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/theme_card_light_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_row="4"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_light_blue_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/theme_card_text_light_blue"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
            </GridLayout>
        </RelativeLayout>
    </ScrollView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_divider" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_disagree"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/dialog_button"
            android:clickable="true"
            android:text="@string/disagree"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="?attr/colorAccent" />
        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/button_agree"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/dialog_button"
            android:clickable="true"
            android:paddingRight="16dp"
            android:text="@string/agree"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="?attr/colorAccent" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />
</LinearLayout>


